# mako

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-bake.hcl  justfile  rust-toolchain.toml
crates/dvgw-edi/: Cargo.toml  README.md
crates/dvgw-edi/src/: any_message.rs  error.rs  lib.rs  message.rs  message_type.rs  platform.rs  report.rs  validate.rs  version.rs
crates/dvgw-edi/tests/: smoke.rs
crates/edi-energy/: Cargo.toml  README.md  metadata.json
crates/edi-energy/benches/: benchmarks.rs
crates/edi-energy/examples/: 01_parse_utilmd.rs  02_parse_mscons.rs  03_build_messages.rs  04_interchange_dispatch.rs  05_validate.rs  06_parse_reader.rs
crates/edi-energy/src/: agency_code.rs  any_message.rs  custom_rule_pack.rs  error.rs  interchange.rs  lib.rs  light_message.rs  message.rs  message_type.rs  object_type.rs  parse.rs  platform.rs  pruefidentifikator.rs  release.rs  report.rs
crates/edi-energy/tests/: builder_writer_guard.rs  conformance.rs  fuzz_compat.rs  hierarchy.rs  parse.rs  registry.rs  roundtrip.proptest-regressions  roundtrip.rs  semantic.rs  typed_fields.rs  types.rs
crates/eeg-billing/: Cargo.toml  README.md
crates/eeg-billing/src/: biomasse.rs  bridge.rs  degression.rs  direktverm.rs  error.rs  foerderdauer.rs  foerderungsende.rs  formula.rs  lib.rs  metering.rs  model.rs  rates.rs  reductions.rs  scheme.rs  settlement_state.rs  solar.rs  tariff.rs  technology.rs  ust.rs  version.rs  wind.rs
crates/eeg-billing/tests/: prop_tests.rs  regulatory_showcase.rs
crates/energy-api/: Cargo.toml  README.md
crates/energy-api/src/: error.rs  jws.rs  lib.rs  spec_version.rs
crates/energy-api/tests/: identifier_validation.rs
crates/energy-billing/: Cargo.toml  README.md
crates/energy-billing/src/: context.rs  engine.rs  error.rs  invoice.rs  lib.rs  position.rs  provider.rs  providers.rs  quantities.rs  rates.rs  tariff.rs
crates/energy-billing/tests/: calculator_tests.rs  golden_scenarios.rs  proptest_invoice.rs
crates/grid-billing/: Cargo.toml  README.md
crates/grid-billing/proptest-regressions/: billing.txt
crates/grid-billing/src/: billing.rs  error.rs  gas.rs  lib.rs  msbg.rs  netzebene.rs  redispatch.rs  regulatory.rs  sect18.rs  sect19.rs  types.rs  umlagen.rs
crates/invoic-checker/: Cargo.toml  README.md
crates/invoic-checker/src/: amount.rs  check.rs  error.rs  lib.rs  tariff.rs
crates/mako-as4/: Cargo.toml  README.md
crates/mako-as4/src/: constants.rs  lib.rs  partner_directory.rs  pmode.rs  profile.rs  server.rs  testing.rs
crates/mako-edm/: Cargo.toml  README.md
crates/mako-edm/src/: archive.rs  domain.rs  error.rs  lib.rs  repository.rs  testing.rs
crates/mako-engine/: Cargo.toml  README.md
crates/mako-engine/benches/: replay_latency.rs  storage.rs  workers.rs
crates/mako-engine/examples/: process_lifecycle.rs
crates/mako-engine/src/: builder.rs  dead_letter.rs  deadline.rs  envelope.rs  erc.rs  erp.rs  error.rs  event_store.rs  fristen.rs  ids.rs  inbox.rs  lib.rs  marktrolle.rs  message_adapter.rs  metrics.rs  migration.rs  outbox.rs  partner.rs  pid_router.rs  process.rs  profile.rs  projection.rs  registry.rs  snapshot.rs  store_slatedb.rs  trace_ctx.rs  types.rs  version.rs  workflow.rs
crates/mako-engine/tests/: cross_fv_dispatch.rs  fristen_exact_utc.rs  slatedb_store.rs
crates/mako-gabi-gas/: Cargo.toml  README.md
crates/mako-gabi-gas/src/: allocation.rs  delord.rs  domain.rs  imbnot.rs  invoic.rs  lib.rs  mmma.rs  nomination.rs  portfolio.rs  schedl.rs  tranot.rs
crates/mako-gabi-gas/tests/: allocation.rs  invoic.rs  nomination.rs
crates/mako-geli-gas/: Cargo.toml  README.md
crates/mako-geli-gas/examples/: geli_gas_lieferbeginn.rs
crates/mako-geli-gas/src/: datenabruf.rs  gas_quality.rs  invoic.rs  lf_anmeldung.rs  lf_stornierung.rs  lib.rs  lieferbeginn.rs  mscons.rs  partin.rs  sperrung.rs  sperrung_lf.rs  sperrung_nb.rs  stornierung.rs
crates/mako-geli-gas/tests/: cross_fv.rs  datenabruf.rs  invoic.rs  lieferbeginn.rs  sperrung.rs  stornierung_routing.rs  utilmd.rs
crates/mako-gpke/: Cargo.toml  README.md
crates/mako-gpke/examples/: gpke_supplier_change.rs
crates/mako-gpke/src/: abrechnung.rs  allokationsliste.rs  anfrage_bestellung.rs  ankuendigung_zuordnung_lf.rs  comdis.rs  datenabruf.rs  konfiguration.rs  konfiguration_aenderung.rs  lf_abmeldung.rs  lf_anmeldung.rs  lib.rs  messwerte.rs  neuanlage.rs  partin.rs  post_acceptance.rs  sperrung.rs  sperrung_lf.rs  stornierung.rs  utilts.rs  wechselprozesse.rs
crates/mako-gpke/tests/: bilateral_lieferbeginn.rs  cross_fv.rs  deadline_wiring.rs  konfiguration.rs  lf_abmeldung.rs  sperrung.rs  stornierung.rs  wechselprozesse.rs
crates/mako-mabis/: Cargo.toml  README.md
crates/mako-mabis/examples/: mabis_bilanzkreisabrechnung.rs
crates/mako-mabis/src/: bilanzkreisabrechnung.rs  clearingliste.rs  lib.rs  summenzeitreihe.rs  utilts_aggregation.rs
crates/mako-mabis/tests/: clearingliste.rs  (+1 more)
crates/mako-markt/: Cargo.toml  README.md
crates/mako-mdm/: Cargo.toml  README.md
crates/mako-nbw/: Cargo.toml  README.md
crates/mako-nne/: Cargo.toml  README.md
crates/mako-obs/: Cargo.toml  README.md
crates/mako-plugin/: Cargo.toml  README.md
crates/mako-redispatch/: Cargo.toml  README.md
crates/mako-service/: Cargo.toml  README.md
crates/mako-wim/: Cargo.toml  README.md
crates/mako-wim-gas/: Cargo.toml  README.md
crates/metering/: Cargo.toml  README.md
crates/netz-checker/: Cargo.toml  README.md
crates/redispatch-xml/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_as4_envelope.rs  fuzz_builder.rs  fuzz_format_version.rs  fuzz_interchange.rs  fuzz_obis_code.rs  fuzz_parse_validate.rs  fuzz_tariff_input.rs  fuzz_validation_engine.rs
xtask/: Cargo.toml
xtask/src/: add_release.rs  audit_ahb.rs  bump_version.rs  check_release_coverage.rs  codegen.rs  extract_docx.rs  extract_pdf.rs  generate_fixtures.rs  import_codelists.rs  import_xml_profiles.rs  main.rs  release_diff.rs  validate_profiles.rs  validate_pruefids.rs  validate_release_codes.rs
(+910 files in other folders)
