[workspace]
resolver = "2"
members = [
    "crates/edi-energy",
    "crates/energy-api",
    "crates/mako-engine",
    "crates/mako-gpke",
    "crates/mako-wim",
    "crates/mako-geli-gas",
    "crates/mako-mabis",
    "crates/mako-as4",
    "crates/mako-redispatch",
    "crates/redispatch-xml",
    "crates/dvgw-edi",
    "crates/mako-gabi-gas",
    "crates/mako-wim-gas",
    "crates/mako-nbw",
    "crates/mako-markt",
    "crates/mako-edm",
    "crates/mako-obs",
    "crates/mako-service",
    "crates/mako-plugin",
    "crates/invoic-checker",
    "crates/netz-checker",
    "crates/grid-billing",
    "crates/eeg-billing",
    "crates/energy-billing",
    "crates/metering",
    "services/invoicd",
    "services/makod",
    "services/marktd",
    "services/edmd",
    "services/obsd",
    "services/processd",
    "services/netzbilanzd",
    "services/sperrd",
    "services/nis-syncd",
    "services/einsd",
    "services/tarifbd",
    "services/agentd",
    "services/billingd",
    "services/accountingd",
    "services/portald",
    "services/vertragd",
    "xtask",
]
exclude = ["fuzz"]

[workspace.package]
version     = "0.10.0"
authors     = ["hupe1980"]
edition     = "2024"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/hupe1980/mako"
rust-version = "1.94"

[workspace.dependencies]
anyhow      = "1"
dashmap     = "6"
edifact-rs   = "~0.11"
miette       = { version = "7", features = ["fancy-no-syscall"] }
rubo4e       = { version = "0.7.0", features = ["versioned", "identifiers", "decimal", "time", "validate", "schemars", "json"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
billing             = { version = "0.4.0", features = ["serde"] }
rust_decimal_macros = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
time         = { version = "0.3", features = ["std", "macros", "serde-well-known", "parsing", "formatting"] }
time-tz      = { version = "2", features = ["db"] }
uuid         = { version = "1", features = ["v4", "v5", "serde"] }
tower-http   = { version = "0.6", features = ["trace", "request-id", "propagate-header"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# OpenTelemetry — used by mako-service (feature=otel) and services
opentelemetry             = "0.32"
opentelemetry_sdk         = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp        = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.32"
cedar-policy              = { version = "4.11", default-features = false }
tracing-opentelemetry     = "0.33"
jsonwebtoken              = "9"
reqwest                   = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
tokio-util                = { version = "0.7", features = ["rt"] }
rmcp                      = { version = "2.2.0", features = ["transport-io", "transport-streamable-http-server"] }
figment                    = { version = "0.10",  features = ["toml", "env"] }
extism                     = { version = "1" }
figment-file-provider-adapter = { version = "0.1", package = "figment_file_provider_adapter" }
schemars                  = { version = "1.2.1" }

# ── Internal workspace crates (path + version so domain crates can be published) ─
edi-energy       = { path = "crates/edi-energy",  version = "0.10" }
mako-engine      = { path = "crates/mako-engine",      version = "0.10" }
mako-markt       = { path = "crates/mako-markt",       version = "0.10" }
mako-edm         = { path = "crates/mako-edm",         version = "0.10" }
grid-billing     = { path = "crates/grid-billing",     version = "0.10" }
eeg-billing      = { path = "crates/eeg-billing",      version = "0.10" }
mako-obs         = { path = "crates/mako-obs",         version = "0.10" }
mako-service     = { path = "crates/mako-service",     version = "0.10" }
mako-plugin      = { path = "crates/mako-plugin",      version = "0.10" }
invoic-checker   = { path = "crates/invoic-checker",   version = "0.10" }
netz-checker     = { path = "crates/netz-checker",     version = "0.10" }
energy-billing   = { path = "crates/energy-billing",   version = "0.10" }
dvgw-edi         = { path = "crates/dvgw-edi",         version = "0.10" }
metering         = { path = "crates/metering",          version = "0.10" }
sepa             = { version = "0.2.0" }

# Kafka client: pure Rust, MSRV 1.88, zero-unsafe, exactly-once semantics.
# Required by mako-service feature "kafka" (EventBus scale-out backend).
# Activate at >500 MaLo or >20 webhook subscribers — see event_bus.rs.
# Default features include: compression (gzip/snappy/lz4), ring (rustls crypto).
krafka           = { version = "0.12" }

# ── Apache Iceberg OLAP tier (edmd) ─────────────────────────────────────────
# Exact versions shipped in the iceberg 0.9.1 release (verified from crate source):
#   iceberg + iceberg-storage-opendal + iceberg-catalog-sql → arrow 57, parquet 57
#   iceberg-datafusion 0.9.1                               → datafusion 52
# MSRV 1.94 required by iceberg.
iceberg                 = { version = "0.9.1" }
iceberg-storage-opendal = { version = "0.9.1" }
iceberg-datafusion      = { version = "0.9.1" }
iceberg-catalog-sql     = { version = "0.9.1" }
arrow                   = { version = "57", default-features = false }
# lancedb requires arrow 58 — declared directly in agentd/Cargo.toml (not here)
# because iceberg in edmd pins arrow 57; both can coexist since semver treats
# arrow 57 and 58 as distinct crate versions.
lancedb                 = { version = "0.31" }   # enabled: rubo4e 0.7.0 fixed BUG-1 (time pin)
parquet                 = { version = "57", default-features = false }
datafusion              = { version = "52", default-features = false }
# opendal 0.55 is exactly what iceberg 0.9.1 requires — do not upgrade.
opendal                 = { version = "0.55", default-features = false }

# ── Testing utilities ───────────────────────────────────────────────────────
# testcontainers: spin up Docker containers in Rust integration tests.
# Used by services' `tests/` to validate SQL queries against a real PostgreSQL
# instance (see `just sqlx-prepare` and `just test-integration`).
testcontainers   = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# ── Release profile ─────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"
