[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
jsonschema = { version = "0.46", default-features = false }
pdf-extract = "0.12"
time        = { workspace = true }
zip         = { version = "3", default-features = false, features = ["deflate"] }
quick-xml   = { version = "0.40", features = ["serialize"] }
