[package]
name         = "energy-billing"
description  = "Pure multi-product retail energy billing for German markets. STROM, GAS, WAERME, SOLAR, EEG, EINSPEISUNG, §14a WAERMEPUMPE/WALLBOX, HEMS, EMOBILITY, ENERGIEDIENSTLEISTUNG, §41a EPEX dynamic. Regulatory rates: §3 StromStG, §2 EnergieStG, BEHG CO₂. BO4E Rechnung JSON. Zero I/O, zero async, no float money."
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
# BO4E Steuerbetrag for the EN16931 BG-23 VAT breakdown.
rubo4e = { workspace = true }
billing             = { workspace = true }
eeg-billing         = { workspace = true, features = ["serde"], optional = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
serde_json          = { workspace = true }
time                = { workspace = true }
time-tz             = { version = "2", features = ["db"] }
tracing             = { version = "0.1", default-features = false }

[features]
## Enable EEG settlement delegation to `eeg-billing`.
## Required for `EegProvider` full-accuracy path (`quantities.eeg_full`).
eeg = ["dep:eeg-billing"]
## Enable all optional features.
full = ["eeg"]

[dev-dependencies]
time = { workspace = true, features = ["macros"] }
serde_json = { workspace = true }
proptest   = "1"

[[test]]
name = "calculator_tests"
path = "tests/calculator_tests.rs"

[[test]]
name = "proptest_invoice"
path = "tests/proptest_invoice.rs"

[[test]]
name = "golden_scenarios"
path = "tests/golden_scenarios.rs"
