[package]
name         = "mako-as4"
version.workspace     = true
description  = "BDEW MaKo AS4 profile — AS4/ebMS3 transport for German energy market communication"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["as4", "ebms", "energy", "mako", "bdew"]
categories   = ["network-programming", "encoding"]

[dependencies]
asx-rs = { version = "0.8", features = ["as4", "interop-strict"] }

[features]
## Activates the `asx-rs/server` feature (Axum router helpers) so dependents
## can wire BDEW router defaults without taking a direct `asx-rs` dep.
server = ["asx-rs/server"]
## Activates test-only helpers: `BdewTestPki`, `generate_self_signed_bdew_keypair`,
## and `MockAs4Endpoint`. Delegates to `asx-rs/testing` — no additional deps.
## Never enable in production binaries.
testing = ["asx-rs/testing", "server"]
