[package]
name             = "mako-edm"
version.workspace = true
description      = "Energy Data Management library — MSCONS meter reads, SLP reconstruction, Mehr-/Mindermengen imbalance"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
## Enables in-memory repository implementations for tests.
testing = []

[dependencies]
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
time         = { workspace = true }
uuid         = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
