[package]
name         = "mako-gabi-gas"
version.workspace     = true
description  = "GaBi Gas process engine for German gas market balancing communication (Gasbilanzierung) — coming soon"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["gabi-gas", "gas", "balancing", "mako", "dvgw"]
categories   = ["data-structures"]

[dependencies]
dvgw-edi    = { path = "../dvgw-edi", version = "0.7" }
mako-engine = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]
mako-engine = { workspace = true, features = ["testing"] }
serde_json  = { workspace = true }
tokio       = { version = "1", features = ["full"] }
