[package]
name         = "mako-gabi-gas"
version.workspace     = true
description  = "GaBi Gas process engine for German gas market balancing communication (Gasbilanzierung) — coming soon"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["gabi-gas", "gas", "balancing", "mako", "dvgw"]
categories   = ["data-structures"]

[dependencies]
dvgw-edi     = { workspace = true }
mako-edm     = { workspace = true }
mako-engine  = { workspace = true }
metering     = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
time         = { workspace = true }
time-tz      = { version = "2", features = ["db"] }

[dev-dependencies]
mako-engine         = { workspace = true, features = ["testing"] }
serde_json          = { workspace = true }
tokio               = { version = "1", features = ["full"] }
